<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    
    <string name="bill_amount_textView">Bill Amount</string>
    <string name="edtBillAmount_editText">0.0</string>    
    
    <string name="tipAmount_textView">TipAmount(%)</string>
	<string name="seekBarProgress_textView">12</string>
    
    <string name="round_checkBox"></string>   
	<string name="round_textView">Round to nearest dollar</string>

	<string name="calculate_button">calculate</string>
		
	<string name="tip_textView">Tip:</string>
	<string name="calculatedTip_textView">$0</string>
	
</resources>
