<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/edtBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/billAmountTextView"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/billAmountTextView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/edtBillAmount_editText" />

    <TextView
        android:id="@+id/roundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chkRound"
        android:layout_alignBottom="@+id/chkRound"
        android:layout_centerHorizontal="true"
        android:text="@string/round_textView" />

    <TextView
        android:id="@+id/txtTipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tipTextView"
        android:layout_alignBottom="@+id/tipTextView"
        android:layout_alignLeft="@+id/edtBillAmount"
        android:text="@string/calculatedTip_textView"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTipResult"
        android:layout_alignLeft="@+id/chkRound"
        android:layout_marginBottom="16dp"
        android:text="@string/calculate_button" />

    <CheckBox
        android:id="@+id/chkRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCalculate"
        android:layout_alignLeft="@+id/billAmountTextView"
        android:layout_marginBottom="21dp"
        android:text="@string/round_checkBox" />

    <TextView
        android:id="@+id/tipAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/billAmountTextView"
        android:layout_alignTop="@+id/tipAmountSeekBar"
        android:text="@string/tipAmount_textView" />

    <TextView
        android:id="@+id/billAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/roundTextView"
        android:text="@string/bill_amount_textView" />

    <SeekBar
        android:id="@+id/tipAmountSeekBar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edtBillAmount"
        android:layout_below="@+id/edtBillAmount"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/sbProgressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tipAmountSeekBar"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/roundTextView"
        android:text="@string/seekBarProgress_textView" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="76dp"
        android:text="@string/tip_textView" />

</RelativeLayout>
